<resources>
    <string name="app_name">Widgets</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
</resources>
