<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:gravity="center|top"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language" />


    <CheckBox
        android:id="@+id/chbEnglish"
        android:text="@string/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chbFrench"
        android:text="@string/french"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chbGerman"
        android:text="@string/german"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margintop"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbFemale"
            android:checked="true"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rbMale"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margintop"
        android:text="@string/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spCountry"
        android:entries="@array/countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="@dimen/margintop"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:onClick="submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>